# Pythinker

./: .coderabbit.yaml  .dev.sh  .editorconfig  .env.dokploy  .env.example  .env.kimi-backup  .gitattributes  .gitignore  AGENTS.md  AGENT_COMPUTER_VIEWER_IMPLEMENTATION_SUMMARY.md  AGENT_COMPUTER_VIEW_ARCHITECTURE.md  AGENT_ENHANCEMENT_DETAILED_PLAN.md  AGENT_MONITORING_REPORT.md  AGENT_OPTIMIZATION_PLAN.md  AGENT_TEST_PLAN.md  AGENT_WORKFLOW_CORRECTED_INVESTIGATION_REPORT.md  AGENT_WORKFLOW_ENHANCEMENT_PLAN.md  AGENT_WORKFLOW_FIX_PLAN.md  AGENT_WORKFLOW_MONITORING_IMPLEMENTATION_SUMMARY.md  ARCHITECTURE_EVOLUTION_COMPLETE.md  ARCHITECTURE_EVOLUTION_EXECUTIVE_SUMMARY.md  ARCHITECTURE_EVOLUTION_VALIDATION_SUMMARY.md  BROWSER_CDP_TIMEOUT_FIXES.md  BROWSER_PERMISSION_DEBUG_GUIDE.md  BROWSER_USE_INTEGRATION_COMPLETE.md  BROWSER_VNC_ISSUE_REPORT.md  CDP_INPUT_TEST_SUMMARY.md  CHANGELOG.md  CHANGELOG_DEEPCODE_2026_02_15.md  CLAUDE.md  CODE_ANALYSIS_TOOLS_GUIDE.md  CODE_OF_CONDUCT.md  CODE_QUALITY_REPORT.md  COMMAND_REFERENCE_ENHANCEMENT_SUMMARY.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_SSE_AND_CANCELLATION_FIX.md  COMPREHENSIVE_CODE_AUDIT_REPORT.md  COMPREHENSIVE_FIX_PLAN.md  COMPREHENSIVE_PYTHINKER_ARCHITECTURE_ENHANCEMENT_PLAN.md  CONNECTIVITY_FIX_SUMMARY.md  (+138 more)
backend/: .dockerignore  .env.example  .trivyignore  BROWSER_RETRY_PROGRESS_IMPLEMENTATION.md  BROWSER_USE_FIX_TEST_REPORT.md  CLAUDE.md  Dockerfile  Dockerfile.gateway  README.md  TESTING_QUICK_REFERENCE.md  check_collection_vectors.py  check_qdrant_schema.py  dev.sh  import_superpowers_skills.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  reseed_skills.py  ruff_remaining.txt  run.sh  test_browseruse_fix.py  test_create_collection.py  test_llm_wrapper.py  test_sparse_vector.py  test_vectors_config.py  validate_follow_up.py
backend/agent/: agent_loop.md  modules.md  prompt.md  tools.json
backend/app/: CLAUDE.md  __init__.py  main.py
backend/app/core/: CLAUDE.md  alert_manager.py  async_utils.py  circuit_breaker_adaptive.py  circuit_breaker_registry.py  config.py  config_auth.py  config_channels.py  config_database.py  config_deals.py  config_enums.py  config_features.py  config_knowledge.py  config_llm.py  config_research_pipeline.py  config_sandbox.py  config_scraping.py  config_stealth.py  deep_research_manager.py  diagnostics.py  enhanced_agent_runner.py  error_manager.py  failure_tracker.py  feature_flags.py  health_monitor.py  lifespan.py  middleware.py  prometheus_metrics.py  recovery_monitor.py  resource_manager.py  resource_monitor.py  retry.py  sandbox_manager.py  sandbox_pool.py  search_provider_policy.py  system_integrator.py  workflow_manager.py  workflow_timing_contract.py
backend/app/gateway/: main.py
backend/app/infrastructure/: logging.py  structured_logging.py
backend/app/interfaces/: dependencies.py
backend/app/workers/: job_worker.py
backend/docs/: ENHANCEMENT_PLAN_VNC_LOADING.md  IMPLEMENTATION_COMPLETE.md  SKILL_ACTIVATION_FRAMEWORK.md  SKILL_INTEGRATION_PIPELINE.md  SKILL_SYSTEM_ARCHITECTURE.md  TESTING_AND_LINTING_ENHANCEMENT.md  vnc_browser_shift_fix.md
backend/docs/evaluation/: AGENT_ENHANCEMENT_EVALUATION.md  EVALUATION_FRAMEWORK_STATUS.md  FRAMEWORK_COMPLETION_REPORT.md
backend/docs/examples/: fastapi_best_practices_2026.py  pydantic_v2_best_practices_2026.py
backend/docs/fixes/: BROWSER_CRASH_HARDENING.md  BROWSER_CRASH_HARDENING_QUICK_REFERENCE.md  BROWSER_CRASH_HARDENING_SUMMARY.md
backend/docs/plans/: 2026-02-02-superpowers-integration-mapping.md  2026-02-11-agent-app-enhancement-master-plan.md  AGENT_ENHANCEMENT_PLAN.md  MASTER_PLAN_EXECUTION_COMPLETE.md  PHASE_0-5_IMPLEMENTATION_COMPLETE.md  PHASE_6_OBSERVABILITY_COMPLETE.md  ROBUST_AGENT_ENHANCEMENT_PLAN.md
backend/nanobot/: __init__.py
backend/nanobot/agent/: context.py  loop.py  skills.py  subagent.py
backend/nanobot/bridge/: package.json
backend/nanobot/channels/: discord.py  email.py  manager.py  matrix.py  telegram.py  telegram_update_offset_store.py  telegram_webhook.py
backend/nanobot/config/: schema.py
backend/nanobot/providers/: openai_codex_provider.py
backend/nanobot/templates/: AGENTS.md  SOUL.md
backend/results/: .gitkeep
backend/scripts/: README.md  capture_metrics.sh  check_collection_vectors.py  check_qdrant_schema.py  export_prompt_optimization_dataset.py  generate_evaluation_report.py  generate_pdf_visual_baseline.py  init_mongodb.py  migrate_qdrant_sparse_vectors.py  migrate_to_qdrant.py  reset_dev_db.py  reset_dev_db.sh  reset_qdrant_collections.py  run_dspy_prompt_optimization.py  test_imports.py
backend/tests/: conftest.py  conftest_shared.py  requirements.txt  test_agent_intelligence.py  test_api_file.py  test_auth_routes.py  test_browser_positioning.py  test_circuit_breaker_adaptive.py  test_context_engineering.py  test_context_optimization.py  test_context_synthesis.py  test_create_collection.py  test_cross_session.py  test_ddd_layer_violations.py  test_deep_research.py  test_dependency_compatibility.py  test_domain_logging.py  test_embedding_client.py  test_error_handler.py  test_error_pattern_persistence.py  test_failure_prediction.py  test_fast_path.py  test_flow_mode_selection.py  test_flow_state.py  test_graph_checkpoint_manager.py  test_health_alias_routes.py  test_intent_classifier.py  test_langgraph_checkpointing.py  test_langgraph_routing.py  test_llm_wrapper.py  test_mcp_health.py  test_memory.py  test_memory_extraction.py  test_openreplay_removal.py  test_path_state.py  test_periodic_session_cleanup.py  test_plan_act_graph_routing.py  test_plan_dependencies.py  test_plan_quality_metrics.py  test_plan_validation.py  (+24 more)
backend/tests/application/: test_agent_application_service.py
backend/tests/core/: test_alert_manager.py  test_async_utils.py  test_circuit_breaker_registry.py  test_compose_hardening.py  test_config_auth_validation.py  test_config_channels.py  test_config_database.py  test_config_deals_v2.py  test_config_knowledge.py  test_config_quota_settings.py  test_config_research_pipeline.py  test_config_ux_v2_flags.py  (+15 more)
(+2960 files in other folders)
