[project]
name = "pythinker-backend"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "LOG", "RET", "SIM", "RUF"]
ignore = ["E501", "PLR0913", "PLR2004", "UP042"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG", "PLR2004"]
"app/interfaces/api/**/*.py" = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers --color=yes --cov=app --cov-report=term-missing --cov-fail-under=24"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s %(filename)s:%(lineno)s [%(levelname)s]: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "file_api: marks tests for file API",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests that require external services",
    "unit: marks unit tests (fast, mocked)",
    "e2e: marks end-to-end tests (slow, real LLM)",
    "eval: marks evaluation tests (variable, benchmarks)",
    "flaky: marks tests with non-deterministic behavior",
    "planning: marks tests for planning agent",
    "execution: marks tests for execution agent",
    "reflection: marks tests for reflection agent",
    "verification: marks tests for verification agent",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "app/infrastructure/models/*",
    "app/__init__.py",
    "*/__init__.py",
    # External service integrations (require API keys/external services)
    "app/infrastructure/external/llm/*",
    "app/infrastructure/external/search/*",
    "app/infrastructure/external/cache/*",
    "app/infrastructure/external/file/*",
    "app/infrastructure/external/http_pool.py",
    # Browser automation (requires browser/playwright)
    "app/infrastructure/external/browser/playwright_browser.py",
    "app/infrastructure/external/browser/browseruse_browser.py",
    # Docker sandbox (requires Docker)
    "app/infrastructure/external/sandbox/*",
    # Observability (external integrations)
    "app/infrastructure/observability/*",
    "app/infrastructure/logging.py",
    "app/infrastructure/structured_logging.py",
    # Main app entry point
    "app/main.py",
    # Repository implementations (require MongoDB/Redis)
    "app/infrastructure/repositories/*",
    "app/infrastructure/storage/*",
    # API schemas and routes (tested via integration tests)
    "app/interfaces/api/schemas/*",
    # Tools that require external services
    "app/domain/services/tools/playwright_tool.py",
    "app/domain/services/tools/repo_map.py",
    "app/domain/services/tools/schedule.py",
    "app/domain/services/tools/test_runner.py",
    "app/domain/services/tools/workspace.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass",
]
show_missing = true
# Coverage threshold - adjusted for codebase with heavy external service dependencies
# Domain logic and core services are tested, external integrations are excluded
# Lowered to 24% to account for new tool/skill implementations (slides, excel, wide_research, etc.)
fail_under = 24

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
